force-app/main/default/objects/ValueOverride__c/ValueOverride__c.object-meta.xml
<CustomObject>
    <label>Value Override</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Value Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>