force-app/main/default/objects/ValueOverride__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <description>API name of object being referenced for which to override values with</description>
    <inlineHelpText
	>API name of object being referenced for which to override values with</inlineHelpText>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>