force-app/main/default/objects/ValueOverride__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <description>Stores override value for specified field</description>
    <inlineHelpText>Stores override value for specified field</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>