force-app/main/default/objects/ValueOverride__c/fields/ObjectOverrideId__c.field-meta.xml
<CustomField>
    <fullName>ObjectOverrideId__c</fullName>
    <description>Lookup to override junction record</description>
    <inlineHelpText>Lookup to override junction record</inlineHelpText>
    <label>Object Override</label>
    <referenceTo>ObjectOverride__c</referenceTo>
    <relationshipLabel>Object Overrides</relationshipLabel>
    <relationshipName>ObjectValueOverrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>